<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_bg"
    tools:context="hnwebproject.com.mlmp.Activity.Activity.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_above="@+id/btn_get_started"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/colorWhite1"
            android:textSize="@dimen/dimens_30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/institute"
            android:textColor="@color/colorWhite1"
            android:textSize="@dimen/dimens_30dp"
            android:textStyle="bold" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dimens_10dp"
        android:background="@drawable/round_corner_button"
        android:padding="@dimen/dimens_20dp"
        android:paddingEnd="@dimen/dimens_50dp"
        android:paddingStart="@dimen/dimens_50dp"
        android:text="@string/get_startted" />

</RelativeLayout>
