<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/black">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_10dp"
                    android:id="@+id/iv_back"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:tint="@color/tw__light_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimens_10dp"
                    android:text="@string/str_gpsfrlife"
                    android:layout_marginTop="@dimen/dimens_10dp"
                    android:textColor="@color/tw__light_gray"
                    android:textSize="@dimen/dimens_20dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:src="@drawable/ic_viedo"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:tint="@color/tw__light_gray"
                    android:layout_height="30dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimens_10dp"
                android:text="@string/str_univrvrsion"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="#e5cb7b" />
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens_10dp"
        android:text="@string/str_gpsfrlife"
        android:textSize="@dimen/dimens_20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens_10dp"
        android:id="@+id/tv_gpsfor"
        android:textSize="@dimen/dimens_20dp" />
</LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:background="@color/tw__light_gray"></View>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <TextView
                   android:layout_width="wrap_content"
                   android:text="@string/str_preass"
                   android:textSize="16sp"
                   android:layout_margin="10dp"
                   android:layout_height="wrap_content" />
               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:tint="@color/color_grey"
                   android:layout_margin="10dp"
                   android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                   android:layout_alignParentRight="true"/>
           </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/tw__light_gray"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/rl_unit"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/str_unit"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/text_20"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:tint="@color/color_grey"
                    android:layout_margin="10dp"
                    android:id="@+id/iv_arrow"
                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/ll_listunit"
    android:visibility="gone"
    android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_30dp"
                android:text="@string/str_video"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_5dp"
                android:layout_marginLeft="@dimen/dimens_30dp"
                android:text="@string/str_write"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_5dp"
                android:layout_marginLeft="@dimen/dimens_30dp"
                android:text="@string/str_que"/>
</LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/tw__light_gray"></View>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/str_postass"
                    android:textSize="16sp"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2" />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:tint="@color/color_grey"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/tw__light_gray"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/str_sendcert"
                    android:textSize="16sp"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:tint="@color/color_grey"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginBottom="50dp"
                android:background="@color/tw__light_gray"></View>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>