<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_bg"
    tools:context="hnwebproject.com.mlmp.Activity.Activity.GetYearActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dimens_50dp"
        android:layout_marginRight="@dimen/dimens_50dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/text_main_ques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_20dp"
            android:layout_marginTop="@dimen/dimens_90dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_year_u_r"
                android:textColor="@color/colorWhite1"
                android:textSize="@dimen/dimens_20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:layout_below="@id/text_main_ques">

            <Spinner
                android:id="@+id/et_year"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:hint="@string/year"
                android:inputType="number"
                android:padding="@dimen/dimens_5dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/down_arow"
                android:layout_marginRight="@dimen/dimens_10dp"
                android:layout_alignParentRight="true" />
        </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite1"
        android:hint="@string/next"
        android:textStyle="bold" />

</RelativeLayout>
