<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hnwebproject.com.mlmp.Activity.Fragment.ServicesFragment">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginStart="@dimen/dimens_10dp"
        android:layout_marginEnd="@dimen/dimens_10dp"
        android:layout_marginTop="@dimen/dimens_10dp">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:visibility="visible" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/dimens_10dp"
      android:layout_marginStart="@dimen/dimens_10dp"
        android:layout_marginEnd="@dimen/dimens_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimens_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_10dp"
            android:text="@string/org"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_10dp"
            android:text="@string/partial_grant"
            android:textSize="14sp"
            android:textColor="@color/color_product_name"
            />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_product_name"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_10dp">

                <TextView
                    android:id="@+id/tv_item_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grant"
                    android:textColor="@color/color_product_name"
                    android:textSize="14sp"
                    android:layout_margin="@dimen/dimens_10dp"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/left_arrrow"
                    android:background="@null"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:tint="@color/color_product_name"/>

            </RelativeLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
