<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimens_10dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/hint_appearanceblack1"

    >

        <EditText
            android:id="@+id/et_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_name"
            android:backgroundTint="@color/blackcolor"
            android:inputType="textPersonName"
            android:singleLine="true"
        />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_event_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/hint_appearanceblack1">

        <EditText
            android:id="@+id/et_event_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/desc"
            android:backgroundTint="@color/blackcolor"
            android:inputType="textPersonName"
            android:singleLine="true"
        />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_event_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/hint_appearanceblack1">

        <EditText
            android:id="@+id/et_event_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:backgroundTint="@color/blackcolor"
            android:singleLine="true"
            />

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Event Date"
        android:layout_marginTop="@dimen/dimens_5dp">

        <TextView
            android:id="@+id/tv_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true"
            android:text="Event Date"
            android:padding="@dimen/dimens_10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/dimens_5dp"
            android:layout_marginRight="@dimen/dimens_5dp"
            android:background="@color/grey" />

        <!--  <EditText
              android:id="@+id/et_occasion_date"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:singleLine="true"
          />-->

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:background="@drawable/round_corner_black"
        android:text="Add"
        android:textColor="@color/colorWhite1"
        android:textStyle="bold" />


</LinearLayout>